# ChangeLog for app-crypt/gnupg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.562 2014/12/31 18:27:16 alonbl Exp $

*gnupg-2.0.26-r3 (31 Dec 2014)
*gnupg-2.1.1-r1 (31 Dec 2014)

  31 Dec 2014; Alon Bar-Lev <alonbl@gentoo.org>
  +files/gnupg-2.0.26-misc-cve.patch, +files/gnupg-2.1.1-misc-cve.patch,
  +gnupg-2.0.26-r3.ebuild, +gnupg-2.1.1-r1.ebuild, -gnupg-2.1.1.ebuild:
  Fix misc CVEs, bug#534110

*gnupg-2.1.1 (17 Dec 2014)

  17 Dec 2014; Kristian Fiskerstrand <k_f@gentoo.org> +gnupg-2.1.1.ebuild,
  -gnupg-2.1.0-r1.ebuild:
  Version bump to GnuPG 2.1.1

*gnupg-2.1.0-r1 (24 Nov 2014)

  24 Nov 2014; Kristian Fiskerstrand <k_f@gentoo.org> +gnupg-2.1.0-r1.ebuild,
  -gnupg-2.1.0.ebuild:
  Revbump to fix dependencies due to known issues reported on gnupg mailing list

  19 Nov 2014; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.1.0.ebuild:
  Update GnuPG 2.1 deps when static USE to match general requirements

  09 Nov 2014; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.1.0.ebuild:
  Make sure to properly escape variables for elog messages

  09 Nov 2014; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.1.0.ebuild:
  Add info on secret key migration and remove invalid symlinks for keyserver
  helpers replaced by dirmngr

  08 Nov 2014; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.1.0.ebuild:
  Bump min requirement to 1.6.2 as a precautionary measure as some users of
  other distributions have reported issues using Ed25519 with 1.6.1

*gnupg-2.1.0 (06 Nov 2014)

  06 Nov 2014; Kristian Fiskerstrand <k_f@gentoo.org> +gnupg-2.1.0.ebuild,
  -gnupg-2.1.0_beta864.ebuild:
  Bump GnuPG 2.1 branch to final release. Fix bug #525154

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26.ebuild:
  Stable for sparc, wrt bug #521174

  28 Oct 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26.ebuild:
  Stable for ia64, wrt bug #521174

*gnupg-2.1.0_beta864 (05 Oct 2014)
