@@ -14,13 +14,22 @@ EBUILD gnupg-2.0.25.ebuild 4747 SHA256 6c57559a986cb9271891d041a6f1e7903ccce835c
 EBUILD gnupg-2.0.26-r2.ebuild 4886 SHA256 7f49e6631f28793979c32481138669548e2308df2532e355b21cddf9a44e1c4b SHA512 76ed7eee2a8ebd34a733e4b1484ce2b46226e35da5a1b4e911176d3209dd39dcf25b410808c3f08ebc060b351cd2266dec96dd0374bd3a828394c7efc3aa27a9 WHIRLPOOL 6d9d5eaa5367fad5b0e668138dc1485c50604885458e8958ddfda329222f663eef342ddf64e46eb9c871f41c96a9858f26acadab1a3d3b95f12eb0d0f07ed0c8
 EBUILD gnupg-2.0.26-r3.ebuild 4928 SHA256 2116ba200f294f1665bc3f213a67a5202ba0172fe29b5cfcd2bdeb3807f0d960 SHA512 15ed4bbb1915a6daca053c7cbd71a79cb11f36b7cbbb11e90a017be0b2842444db676d1426913df808e0d471e8e8fbc1304229af774c621698ec54c25336bf48 WHIRLPOOL ac66f6e039d40e4a789b7b9efa84f085310f39dbdc2131323d0cf939e5ffe866170f832adda07b00a25863919f5d5d155bb30d563654fdc764b024c667ac0c9a
 EBUILD gnupg-2.0.26.ebuild 4815 SHA256 c1dad0a216f9af5605619bfd4ccc6d02caf49051d3532ecc039966284a807dc4 SHA512 7bd67cd37735a92b45ec167f30b038a830c7da1834d6e7500768bae2a4c89e9c9994012d78f4d52f4ad520cf7a7e1e1b42125dcecc5f408da0e4dbfa40afbf45 WHIRLPOOL 3d4d532f357d949cb02d4e61f86a9d724c10212a9329abf600e1adf5be6430c24992e076b4674b5c66e332928530a6fec166c5838a2eaa9fe4845a6f80eeb02c
-EBUILD gnupg-2.1.1-r1.ebuild 4659 SHA256 7f91ba1562b043ce44dc81f8718b8f49d4e22fa7000473132ac204f6cceccab1 SHA512 411a35236734b483e9812463161c4bdb6304d1be8e28e4c1846aba564d265e1e61a9c210c8b28f7a38a5df8c0eb78369fa90d85087de16feeb620a5eae991e43 WHIRLPOOL df52d80a0da889dad8f8c9d9016e02f1e05cd9a72f7f1e1e312698be71c8c23784990d551bfc4086bd5a9a85a5fccdb74c6c73d1e8cf98c4c6bbba3e1c262a3f
-MISC ChangeLog 82681 SHA256 893e8ab32ed148eaa8d6b9da4de5d50181ec60ad1ce9cf3af2a62e4ed2c15816 SHA512 d12b116ac12923aec01ebb249be64949330f5df0669308f1d6d378fd0b432901253bfa41334c589fbe68962cddf8e3de88f67c475aefe029f38a5dcd6e93f52c WHIRLPOOL 5653e27842e09db96778d3c5e7a4f04c4709a59da2919c7810751fc72465529a86063fc984a4a82b792db391e3e4586edbd931d48fa27ac015ad21359a18dd05
+EBUILD gnupg-2.1.1-r1.ebuild 4680 SHA256 0f77890747056f758c449ae0bd9a0d5698d8b8c2e3d7fcad8f23fae7829749f5 SHA512 413a7f072d8a6b7bb4a7c943e5ac4ec2475a915a767e168dc96e766b31e35055d77c8b8a66f88c83a3992a10dda1e6be6c18f42689525629695d9e78b98515f8 WHIRLPOOL b8dbbd2fafe07b1b079c3f03c2a257a3202c480bcff8966269d6edc95e0e7ec231e30865f0cb53f0821cfecc911358cface6867f99f4db3d4f5a458de9a20700
+MISC ChangeLog 82864 SHA256 e4a15d3ef79c69828fe4153fe23559b1f359cf8dc91956547a2e91afd65510af SHA512 c616ae7fa8c7ea45400b4b3b5da3b711c7875e8ce1ad8da8efc562a275e963fe6c2a32005d7c7f795874f2c65cafe1f032c3edc66db326c776b6bb98dcb3f9b6 WHIRLPOOL 2038fb5ae6056bb9be34ffb7fa0f44b0f3ac77c26a0ba0b5c2ba12a6dd33df125c12b9c44934bf19caa4e5deccf51dda6f1d4b0872fcccfd19026e00bba5fdec
 MISC metadata.xml 1032 SHA256 cbef1621eb1364c8d12ac18e71cf4aabfced9ecd3c990a3f3cdf066902dc97bb SHA512 5e2ef4380effe027a0b0b8a11a29ed1996b3b5256ee333909d4a7cfcb18ea1e9dead9b8303c7dffc1ad10014dea79e827b1d84caa92294f4d3dfc29ff23a6af5 WHIRLPOOL a24c7f71ed140f34dd59b10314869d0c5482063be20faefa1591595feb856c79bc57a6b344dd467875cf3389d8cd14e2d41f2312f51d3b77dcbe27af97b7f129
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iF4EAREIAAYFAlSkQBUACgkQXYk9GL8g3FF+1wEAl7bXLyu3QL0F8/QbWszsrl9h
-sDMl87F2R7mrWdWpiecA/16Fzh1mlWK/w9k7KtsLcgF1p2rqWt4fTy634sDhd42r
-=STPu
+iQIcBAEBCAAGBQJUrCFTAAoJEPw7F94F4TaguJIQAKU3sINU14lbUePaHs7QxB3U
+BD+1wLd0ZKTitX/2tBWX+l50tfK9nz4/CsHx3rmkiBz1nokVCCu7o6PSBfbRrRU+
+EFnHcAyNuls7zlBO+oNUQ6jHnZJj1vpfUuZiv68/Xjcq3fmUu/z/sqocnp2h/Vot
+vFE5WHpDOADhqxDqpBCGZU5x7kVprrF1//nOvyNqEbnGbojKc0k9RQjNoyLaZSOi
+gU/lVuTpgEj7waoxTL888y6nFwQbcU/mV9UV5kD1sTROH9LxKQ+AelE+1MXMVNhK
+CpFjG5VjEn/+Ib9RoiBp3mUWlZNch9evAMrHPy8Wv8MY4ZUn9EPOCTaf94ihri/S
+jqblDeAwSpz8Ou93EZyMI0BA3qlt1/ltB31Nm1ubfyFORHwOSSJFqMjt+IjrW8nr
+Tov7LTNIoBZT4FmLPow/l/TI2wbwMnnSfyu1FQRfuYViXejqgWdEfwf/uklauGu+
+uQBXtmpfn3ANVtaYvfpvVi0u96/14sesmVxi8egPQUPaKCikf/X+OLa9/c8ePIHn
+kLxukr8q+zusVHaSI1S1gOPaEAdsTg9xj6KqxUo6H+pd5dkDFnMCHB31ZSNC6dr+
++NpGVns5vswGYJhpbMF6UkvCAgsKs/uxNn0CjGtmKJDvUESjOQPs6kbLzCQggdT5
+vCgK+IsV6P9qZ9DZhgqS
+=3m16
 -----END PGP SIGNATURE-----
